add back to home button to review page

--- a/cards_app/templates/cards_app/overdue_flashcards.html
+++ b/cards_app/templates/cards_app/overdue_flashcards.html
@@ -100,6 +100,12 @@
             color: #555;
         }
 
+        a {
+            background-color: rgb(255, 198, 198);
+            padding: 1em 2em;
+            margin-top: 2em;
+        }
+
     </style>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -207,5 +213,7 @@
     {% else %}
         <p>No overdue flashcards at the moment.</p>
     {% endif %}
+
+    <a href="/">back to home</a>
 </body>
 </html>
